--- a/.docker/Dockerfile.apache
+++ b/.docker/Dockerfile.apache
@@ -1,7 +1,7 @@
 FROM python:3.12-slim
 
 RUN DEBIAN_FRONTEND=noninteractive apt-get update && \
-    apt-get install -y --no-install-recommends wireguard-tools iptables iproute2 && \
+    apt-get install -y --no-install-recommends wireguard-tools iptables iproute2 apache2 libapache2-mod-wsgi-py3 && \
     apt-get clean all && \
     rm -rf /var/lib/apt/lists/* && \
     mkdir /app
@@ -13,9 +13,12 @@ RUN pip install -U pip wheel setuptools && \
     pip install -U -r requirements.txt && \
     mkdir /app/data
 
+
+COPY .docker/apache.conf /etc/apache2/sites-available/000-default.conf
+COPY .docker/entrypoint.sh /entrypoint.sh
 COPY . .
 
 EXPOSE 5000
 EXPOSE 51820/udp
 
-CMD ["python3", "app.py"]
+CMD ["/entrypoint.sh"]
