--- a/compose.example.yaml
+++ b/compose.example.yaml
@@ -1,8 +1,6 @@
 services:
   wireguard:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: ghcr.io/doyunshin/wireguard-manager:latest
     container_name: wg
     ports:
       - "51820:51820/udp"
