--- a/compose.example.yaml
+++ b/compose.example.yaml
@@ -13,7 +13,7 @@ services:
       - net.ipv4.conf.all.src_valid_mark=1
       - net.ipv4.ip_forward=1
     networks:
-      inside
+      - inside
     restart: always
 
 networks:
