feat(apache): Add apache mod_wsgi

--- a/.docker/apache.conf
+++ b/.docker/apache.conf
@@ -1,17 +1,17 @@
 <VirtualHost *:80>
-    DocumentRoot /app/static
+    DocumentRoot /var/www
     
-    <Directory /app/static>
+    <Directory /var/www>
         Require all granted
     </Directory>
 
-    WSGIDaemonProcess myapp python-path=/app threads=5
+    WSGIDaemonProcess myapp python-path=/app display-name=wgvpn home=/app user=wgvpn group=wgvpn
     WSGIScriptAlias /api /app/app.wsgi
 
     <Directory /app>
-        <Files app.wsgi>
-            Require all granted
-        </Files>
+        WSGIProcessGroup myapp
+        WSGIApplicationGroup %{GLOBAL}
+        Require all granted
     </Directory>
 
     ErrorLog /app/data/logs/error.log
